Auto refresh time now can be adjusted. Font size fix for RadioGroup caption in theme css file.

--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -38,6 +38,7 @@ $v-border-radius: 3px;
 $v-textfield-border-radius: 0;
 $v-font-family: Helvetica, Arial, 'lucida grande', tahoma, verdana, arial, sans-serif;
 $v-font-size: 14px;
+$v-caption-font-size: 14px;
 $v-font-color: #37404E;
 $v-font-weight: 400;
 $v-link-text-decoration: none;
